Yorum Sayfasındaki yorumlar json data ile çekilip sıralandı.Paylaşım kısmındaki sayfa güncellendi

--- a/platforms/android/assets/www/html/newsPhoto.html
+++ b/platforms/android/assets/www/html/newsPhoto.html
@@ -6,21 +6,24 @@
   </div>
   <img class="newProfImg" src="img/prof.jpg"></img>
   <div class="newsBody">
-    <font>{{news.data.bodyImage}}</font>
+    <div class="newPhotoTable">
+      <img class="newPhoto" src="img/background.jpg"></img>
+    </div>
+    <font>{{news.data1.bodyImage}}</font>
   </div>
   <div class="newsFooter">
     <div class="newsInfo">
       <div class="newsLike">
         <i class="eye large icon"></i>
-        <font id="viewCount">25 &nbsp</font>
+        <font id="viewCount">{{news.data1.viewCount}} &nbsp</font>
         <i class="thumbs outline up large icon"></i>
-        <font id="likeCount">3</font>
+        <font id="likeCount">{{news.data1.likeCount}}</font>
       </div>
-      <div class="newsDate">25.07.2016</div>
+      <div class="newsDate">{{news.data1.date}}</div>
     </div>
     <div class="ui fluid buttons">
       <button class="ui button">Begen</button>
-      <button class="ui button">Yorum Yap</button>
+      <button class="ui button" ng-click="page.openYorumPage(news.data1.yorumData)">Yorum Yap</button>
     </div>
   </div>
 </div>
