--- a/www/html/newsActivity.html
+++ b/www/html/newsActivity.html
@@ -24,7 +24,7 @@
     </div>
     <div id="newsFooterBtns" class="ui fluid buttons">
       <button class="ui button">Katılıyorum</button>
-      <button class="ui button" ng-click="page.openYorumPage(news.data2.yorumData)">Yorum Yap</button>
+      <button class="ui button" ng-click="page.OpenYorumPage(news.data2.yorumData)">Yorum Yap</button>
     </div>
   </div>
 </div>
