--- a/www/html/newsPhoto.html
+++ b/www/html/newsPhoto.html
@@ -23,7 +23,7 @@
     </div>
     <div class="ui fluid buttons">
       <button class="ui button">Begen</button>
-      <button class="ui button" ng-click="page.openYorumPage(news.data1.yorumData)">Yorum Yap</button>
+      <button class="ui button" ng-click="page.OpenYorumPage(news.data1.yorumData)">Yorum Yap</button>
     </div>
   </div>
 </div>
