--- a/www/html/newsText.html
+++ b/www/html/newsText.html
@@ -20,7 +20,7 @@
     </div>
     <div id="newsFooterBtns" class="ui fluid buttons">
       <button class="ui button">Begen</button>
-      <button class="ui button" ng-click="page.openYorumPage(news.data0.yorumData)" >Yorum Yap</button>
+      <button class="ui button" ng-click="page.OpenYorumPage(news.data0.yorumData)" >Yorum Yap</button>
     </div>
   </div>
 </div>
