--- a/www/html/newsPhoto.html
+++ b/www/html/newsPhoto.html
@@ -4,12 +4,13 @@
     <font id="newsHeaderFont" >Fotograf</font>
     <i id="newsHeaderStatusIcon" class="big building icon"></i>
   </div>
-  <img class="newProfImg" src="img/prof.jpg"></img>
   <div class="newsBody">
-    <div class="newPhotoTable">
-      <img class="newPhoto" src="img/background.jpg"></img>
+    <div class="newPhoto activity">
+      <div class="newPhotoInfoTable">
+        <img class="newProfImg photo" src="img/prof.jpg"></img>
+        <font class="newBodyText white" >{{news.data1.bodyText}}</font>
+      </div>
     </div>
-    <font>{{news.data1.bodyImage}}</font>
   </div>
   <div class="newsFooter">
     <div class="newsInfo">
@@ -21,8 +22,8 @@
       </div>
       <div class="newsDate">{{news.data1.date}}</div>
     </div>
-    <div class="ui fluid buttons">
-      <button class="ui button">Begen</button>
+    <div id="newsFooterBtns" class="ui fluid buttons">
+      <button class="ui button">Beğen</button>
       <button class="ui button" ng-click="page.OpenYorumPage(news.data1.yorumData)">Yorum Yap</button>
     </div>
   </div>
