--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
     <script src="semantic/dist/semantic.min.js"></script>
     <script src="./js/controller.js"></script>
+    <script src="./js/login.js"></script>
 
     </head>
   <body ng-app="myApp">
@@ -59,18 +60,18 @@
                   <span id="panelTab2" >
                       <ul>
                         <li>
-                            <div class="ui big fluid left icon input">
-                              <input  type="text" placeholder="Kullanıcı Adı" size="50px">
+                            <div id="kadiUI" class="ui big fluid left icon input">
+                              <input id="kadi" type="text" placeholder="Kullanıcı Adı" size="50px">
                               <i class="users icon"></i>
                             </div>
                         </li></br>
                         <li>
-                          <div class="ui big fluid left icon input">
-                            <input type="password" placeholder="Şifre">
+                          <div id="passUI" class="ui big fluid left icon input">
+                            <input id="pass" type="password" placeholder="Şifre">
                             <i class="key icon"></i>
                           </div>
                         </li></br>
-                        <li> <button class="ui fluid green button" onclick="setWindowLocate('profile.html')">Giriş Yap</button></li></br>
+                        <li> <button class="ui fluid green button" onclick="login()">Giriş Yap</button></li></br>
                         <li> <button class="ui button" ng-click="panel.setTab(1)">Back</button></li>
                       </ul>
                   </span>
