--- a/www/register.html
+++ b/www/register.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="js/jquery-ui.min.js"></script>
 
     <script type="text/javascript" src="js/registerControl.js"></script>
+    <script type="text/javascript" src="js/messageBox.js"></script>
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
@@ -27,10 +28,10 @@
     </head>
   <body ng-app="myApp">
     <ion-content padding="true" scroll="false">
-      <div id="message" class="ui floating fluid message" ng-init="message.close()" ng-controller="MessageController as message" ng-show="message.active">
-        <i class="close icon" ng-click="message.close()"></i>
-        <div class="header">{{message.data.head}}</div>
-        {{message.data.body}}
+      <div id="message" class="ui floating fluid message">
+        <i class="close icon" onclick="closeMessageBox()"></i>
+        <div id="msgHeader" class="header">Merhaba</div>
+        <span id="msgBody">dada</span>
       </div>
       <div class="backgroundColor"></div>
       <img id="background" src="img/background.jpg"></img>
@@ -64,8 +65,9 @@
               <div class="field" Align="center">
                 <button class="ui fluid green button" onclick="register()" >Kaydol</button>
               </div>
-            <div style="color:red">
-           </div>
+            <div id="errorText" style="color:red">
+
+            </div>
           </form>
             <button id="backBtn" class="ui button" onclick="setWindowLocate('index.html')">Geri</button>
           </li>
