Kullanıcı girişi kaydı server ile bağlantıları yapıldı aynı zamanda server kısmında veritabanı bağlantıları yapıldı girişler kayıtların çıkardığı hatalar giderilmeye çalışıldı ve serverden alınan token ile cookie oluştrulma silinme işlemleri yapıldı

--- a/www/html/menus.html
+++ b/www/html/menus.html
@@ -9,7 +9,7 @@
     <div class="menuButton">Puanımı gör</div>
     <div class="menuSeparator"></div>
     <div class="menuButton">Uygulama Bilgisi</div>
-    <div class="menuButton" onclick="setWindowLocate('index.html')">Çıkış</div>
+    <div class="menuButton" onclick="logout()">Çıkış</div>
     <div class="menuButton Back" ng-click="page.CloseLeftMenu()"><i class="white remove icon"></i></div>
   </div>
 </div>
@@ -24,7 +24,7 @@
     <div class="menuButton">Paylaşımları Süz</div>
     <div class="menuSeparator"></div>
     <div class="menuButton">Uygulama Bilgisi</div>
-    <div class="menuButton" onclick="setWindowLocate('index.html')">Çıkış</div>
+    <div class="menuButton" onclick="logout()">Çıkış</div>
     <div class="menuButton Back" ng-click="page.CloseRightMenu()"><i class="white remove icon"></i></div>
   </div>
 </div>
