--- a/www/register.html
+++ b/www/register.html
@@ -30,8 +30,8 @@
     <ion-content padding="true" scroll="false">
       <div id="message" class="ui floating fluid message">
         <i class="close icon" onclick="closeMessageBox()"></i>
-        <div id="msgHeader" class="header">Merhaba</div>
-        <span id="msgBody">dada</span>
+        <div id="msgHeader" class="header"></div>
+        <span id="msgBody"></span>
       </div>
       <div class="backgroundColor"></div>
       <img id="background" src="img/background.jpg"></img>
