Kullanıcı Resim değiştirme yapılmaya çalışıldı başarısız oldu haber sayfasındaki haberler sunucudan çekilip tipine göre yerleştirilme yapılmaya çalışıldı hala eksik var oda içerikleri

--- a/www/html/newsPhoto.html
+++ b/www/html/newsPhoto.html
@@ -8,7 +8,7 @@
     <div class="newPhoto activity">
       <div class="newPhotoInfoTable">
         <img class="newProfImg photo" src="img/prof.jpg"></img>
-        <font class="newBodyText white" >{{news.data1.bodyText}}</font>
+        <font class="newBodyText white" >{{news.data.bodyText}}</font>
       </div>
     </div>
   </div>
@@ -16,11 +16,11 @@
     <div class="newsInfo">
       <div class="newsLike">
         <i class="eye large icon"></i>
-        <font id="viewCount">{{news.data1.viewCount}} &nbsp</font>
+        <font id="viewCount">{{news.data.viewCount}} &nbsp</font>
         <i class="thumbs outline up large icon"></i>
-        <font id="likeCount">{{news.data1.likeCount}}</font>
+        <font id="likeCount">{{news.data.likeCount}}</font>
       </div>
-      <div class="newsDate">{{news.data1.date}}</div>
+      <div class="newsDate">{{news.data.date}}</div>
     </div>
     <div id="newsFooterBtns" class="ui fluid buttons">
       <button class="ui button">Beğen</button>
