--- a/www/html/newsText.html
+++ b/www/html/newsText.html
@@ -6,17 +6,17 @@
   </div>
   <img class="newProfImg" src="img/prof.jpg"></img>
   <div class="newsBody">
-    <font>{{news.data0.bodyText}}</font>
+    <font>{{message}}</font>
   </div>
   <div class="newsFooter">
     <div class="newsInfo">
       <div class="newsLike">
         <i class="eye large icon"></i>
-        <font id="viewCount">{{news.data0.viewCount}} &nbsp</font>
+        <font id="viewCount">{{news.data.viewCount}} &nbsp</font>
         <i class="thumbs outline up large icon"></i>
-        <font id="likeCount">{{news.data0.likeCount}}</font>
+        <font id="likeCount">{{news.data.likeCount}}</font>
       </div>
-      <div class="newsDate">{{news.data0.date}}</div>
+      <div class="newsDate">{{news.data.date}}</div>
     </div>
     <div id="newsFooterBtns" class="ui fluid buttons">
       <button class="ui button">Begen</button>
