--- a/www/html/newsActivity.html
+++ b/www/html/newsActivity.html
@@ -8,12 +8,12 @@
     <div class="newPhoto activity">
       <div class="newActivityHeader">
         <div class="newActivityHeaderBackground"></div>
-          <font class="newActivityHeaderText">{{news.data2.activityInfo.name}}</font>
+          <font class="newActivityHeaderText">{{news.data[2].activityInfo.name}}</font>
       </div>
       <div class="newPhotoInfoTable white">
         <img class="newProfImg activity" src="img/prof.jpg"></img>
         <i class="newBodyText huge wait icon"></i>
-        <font class="newBodyText date" >{{news.data2.activityInfo.date}}</br>{{news.data2.activityInfo.time}}</font>
+        <font class="newBodyText date" >{{news.data[2].activityInfo.date}}</br>{{news.data[2].activityInfo.time}}</font>
       </div>
     </div>
   </div>
@@ -21,11 +21,11 @@
     <div class="newsInfo">
       <div class="newsLike">
         <i class="eye large icon"></i>
-        <font id="viewCount">{{news.data2.viewCount}} &nbsp</font>
+        <font id="viewCount">{{news.data[2].viewCount}} &nbsp</font>
         <i class="thumbs outline up large icon"></i>
-        <font id="likeCount">{{news.data2.likeCount}}</font>
+        <font id="likeCount">{{news.data[2].likeCount}}</font>
       </div>
-      <div class="newsDate">{{news.data2.date}}</div>
+      <div class="newsDate">{{news.data[2].date}}</div>
     </div>
     <div id="newsFooterBtns" class="ui fluid buttons">
       <button class="ui button">Katıl</button>
