--- a/www/html/newsPhoto.html
+++ b/www/html/newsPhoto.html
@@ -8,7 +8,7 @@
     <div class="newPhoto activity">
       <div class="newPhotoInfoTable">
         <img class="newProfImg photo" src="img/prof.jpg"></img>
-        <font class="newBodyText white" >{{news.data.bodyText}}</font>
+        <font class="newBodyText white" >{{new.data.bodyText}}</font>
       </div>
     </div>
   </div>
@@ -16,15 +16,15 @@
     <div class="newsInfo">
       <div class="newsLike">
         <i class="eye large icon"></i>
-        <font id="viewCount">{{news.data.viewCount}} &nbsp</font>
+        <font id="viewCount">{{new.data.viewCount}} &nbsp</font>
         <i class="thumbs outline up large icon"></i>
-        <font id="likeCount">{{news.data.likeCount}}</font>
+        <font id="likeCount">{{new.data.likeCount}}</font>
       </div>
-      <div class="newsDate">{{news.data.date}}</div>
+      <div class="newsDate">{{new.data.date}}</div>
     </div>
     <div id="newsFooterBtns" class="ui fluid buttons">
       <button class="ui button">Beğen</button>
-      <button class="ui button" ng-click="page.OpenYorumPage(news.data1.yorumData)">Yorum Yap</button>
+      <button class="ui button" ng-click="page.OpenYorumPage(new.data.yorumData)">Yorum Yap</button>
     </div>
   </div>
 </div>
